@@ -58,11 +58,19 @@ class Sys {
   static method set_env : void ($name : string, $value : string) {
     
     if (Sys::OS->is_windows) {
+      unless ($value) {
+        $value = "";
+      }
       Sys::Env->_putenv_s($name, $value);
     }
     else {
-      my $overwrite = 1;
-      Sys::Env->setenv($name, $value, $overwrite);
+      if ($value) {
+        my $overwrite = 1;
+        Sys::Env->setenv($name, $value, $overwrite);
+      }
+      else {
+        Sys::Env->unsetenv($name);
+      }
     }
   }
   
